--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
+        <a href="#">レッスンしない</a>
+        <a href="#">新規登録しない</a>
         <a href="#" class="login">ログイン</a>
       </div>
     </div>
